# vtk_qt_python_bridge

./: CMakeLists.txt  LICENSE  README.md  test_bridge.py
.github/workflows/: build_windows.yml
src/: bridge_widget.cpp
